<resources>
    <string name="app_name">Practice3</string>

    <string name="supermarket_database">Supermarket Database</string>

    <string-array name="database_tables">
        <item>Employee</item>
        <item>Shop</item>
        <item>ProductQuantity</item>
        <item>Product</item>
    </string-array>

    <string name="show">Show</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="id">id</string>


    <string name="id_with_colon">Id:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="patronymic">Patronymic:</string>
    <string name="position">Position:</string>
    <string name="salary">Salary:</string>
    <string name="shop_id">Shop id:</string>

    <string name="region">Region:</string>
    <string name="city">City:</string>
    <string name="address">Address:</string>

    <string name="product_id">Product id:</string>
    <string name="product_name">Product name:</string>
    <string name="category">Category:</string>
    <string name="price">Price:</string>
    <string name="manufacturer_country">Manufacturer country:</string>

    <string name="quantity">Quantity:</string>
    <string name="price_all">Price all:</string>

    <string name="show_shops_with_products">Show shops with products</string>

    <string name="enter_category">Enter category:</string>
    <string name="show_products_by_entered_category">Show products by entered category</string>

</resources>